//
// Copyright Â© 2019 IZE Ltd. and the project authors
// Licensed under MIT License
//
// See LICENSE.txt for license information.
//

syntax = "proto3";

import "User.proto";

message PublicBroadcastMessage {
  
  // The bytes of the UUID of the message in little endian order. Required for
  // routing. If a received message is missing this field then it's ignored and
  // discarded.
  bytes uuid_bytes = 1;
  
  // The time to live (hop limit) of the message. Recommended for routing with a
  // default value of 15.
  int32 time_to_live = 2;
  
  // The source user of the message.
  User source_user = 3;
  
  // The payload of the message.
  bytes payload = 4;    
}
